// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle should pass extra props to input 1`] = `
<div
  className="checkbox tc-toggle theme-tc-toggle switch checkbox"
>
  <input
    aria-describedby="my-error-id"
    checked={false}
    data-checked={0}
    disabled={false}
    id="id"
    intermediate={false}
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="id"
  >
    <span
      className="switch__label"
    >
      
    </span>
  </label>
</div>
`;

exports[`Toggle should render a Checkbox 1`] = `
<div
  className="checkbox tc-toggle theme-tc-toggle checkbox"
>
  <input
    checked={false}
    data-checked={0}
    disabled={false}
    id="id"
    intermediate={false}
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="id"
  >
    <span
      className="switch__label"
    >
      
    </span>
  </label>
</div>
`;

exports[`Toggle should render a Toggle 1`] = `
<div
  className="checkbox tc-toggle theme-tc-toggle switch checkbox"
>
  <input
    checked={false}
    data-checked={0}
    disabled={false}
    id="id"
    intermediate={false}
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="id"
  >
    <span
      className="switch__label"
    >
      
    </span>
  </label>
</div>
`;

exports[`Toggle should render a Toggle with label 1`] = `
<div
  className="checkbox tc-toggle theme-tc-toggle switch checkbox"
>
  <input
    checked={false}
    data-checked={0}
    disabled={false}
    id="id"
    intermediate={false}
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="id"
  >
    <span
      className="switch__label"
    >
      some label
    </span>
  </label>
</div>
`;

exports[`Toggle should render a autoFocused Toggle 1`] = `
<div
  className="checkbox tc-toggle theme-tc-toggle switch checkbox"
>
  <input
    autoFocus={true}
    checked={false}
    data-checked={0}
    disabled={false}
    id="id"
    intermediate={false}
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="id"
  >
    <span
      className="switch__label"
    >
      
    </span>
  </label>
</div>
`;

exports[`Toggle should render a checked Toggle 1`] = `
<div
  className="checkbox tc-toggle theme-tc-toggle switch checkbox"
>
  <input
    checked={true}
    data-checked={2}
    disabled={false}
    id="id"
    intermediate={false}
    onChange={[Function]}
    type="checkbox"
  />
  <label
    data-feature="toggle.disable"
    htmlFor="id"
  >
    <span
      className="switch__label"
    >
      
    </span>
  </label>
</div>
`;

exports[`Toggle should render a disabled Toggle 1`] = `
<div
  className="checkbox tc-toggle theme-tc-toggle switch checkbox theme-tc-toggle-disabled tc-toggle-disabled"
>
  <input
    checked={false}
    data-checked={0}
    disabled={true}
    id="id"
    intermediate={false}
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="id"
  >
    <span
      className="switch__label"
    >
      
    </span>
  </label>
</div>
`;

exports[`Toggle should render an intermediate Toggle 1`] = `
<div
  className="checkbox tc-toggle theme-tc-toggle switch checkbox"
>
  <input
    checked={false}
    data-checked={1}
    disabled={false}
    id="id"
    intermediate={true}
    onChange={[Function]}
    type="checkbox"
  />
  <label
    data-feature="toggle.enable"
    htmlFor="id"
  >
    <span
      className="switch__label"
    >
      
    </span>
  </label>
</div>
`;
